Wardog notes